added kara api
